# cuda_raytracer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md
benchmark/: CMakeLists.txt  bench_basic_scene.cu  bench_cube_subdivision.cpp  bench_cube_subdivision.cu  bench_dummy.cpp
benchmark/files/: cube_subdiv_6.mtl
cmake/: safeguards.cmake
examples/: complex.blend  complex.mtl  cube_room.mtl  cube_room_flat.mtl  cube_smooth.mtl  material_scene.blend  material_scene.blend1  material_scene.mtl  material_scene_smoothed.blend  materials_flat.blend  materials_flat.mtl  materials_smooth.blend  materials_smooth.mtl  mini_cooper.mtl  mini_reduced.mtl  shapes.blend  structured_underground.mtl
src/: camera.cpp  camera.cu  camera.h  input_manager.cpp  input_manager.h  macros.h  main.cpp  material.h  obj_io.cpp  obj_io.cu  obj_io.h  phong_parameters.h  ray.h  surface_raii.cu  surface_raii.h  triangle.h  vector.h  visualization.cu  visualization.h  window.cpp  window.h  world.cu  world.h
src/graphic/: camera.cu  camera.h  camera.inl  light.h  material.h  phong_parameters.h  ray.h  shading.cu  shading.h  shading.inl  triangle.h  triangle.inl  vector.h
src/graphic/kernels/: image_loop_macro.h  shaded.cpp  shaded.cpp.inl  shaded.cu  shaded.h  shaded.inl  trace.cpp  trace.cu  trace.h  trace.inl  utility.cpp  utility.cu  utility.h  utility.inl
src/graphic/render/: depth.h  shading.h  world_depth.h  world_shading.h
src/management/: input_callback.cpp  input_callback.h  input_manager.cpp  input_manager.h  memory_surface.cpp  memory_surface.h  png_helper.h  surface_raii.cu  surface_raii.h  thrust_containers.h  window.cpp  window.h  world.cu  world.h
src/util/demos/: fps_demo.h  fps_demo.inl
src/util/kernel_launcher/: world_depth.h  world_depth.inl  world_shading.cu  world_shading.h  world_shading.inl
src/util/tests/: integration_render.h  integration_render.inl
test/: CMakeLists.txt  compare_images.py  demo_cuda_draw_buffer.cu  demo_draw_mini.cu  demo_render_materials.cu  equirectengular_phong_shader.cpp  flat_phong_shader.cpp  flat_phong_shader.cu  int_test_cube.cpp  int_test_cube.cu  int_test_cube_smooth.cpp  int_test_cube_smooth.cu  int_test_materials.cpp  int_test_materials.cu  int_test_materials_smooth.cu  reference_cube.rgba  reference_materials.rgba  scene_setup.h  smooth_equirectengular_phong_shader.cu  smooth_phong_shader.cpp  smooth_phong_shader.cu  test_ad_san.cpp  test_build_cuda.cpp  test_build_cuda.cu  test_camera.cpp  test_camera.cu  test_camera_control.cpp  test_cuda_draw_buffer.cu  test_cuda_ray.cu  test_cuda_triangle.cu  test_cuda_vector.cpp  test_cuda_vector.cu  test_glfw.cpp  test_input_manager.cpp  test_kernel_from_cpp.cpp  test_light.cpp  test_load_obj.cpp  test_material.cpp  test_obj_io.cpp  test_obj_io.cu  (+8 more)
